Feat: Add responsive image gallery

--- a/0x02-tailwind-css/src/output.css
+++ b/0x02-tailwind-css/src/output.css
@@ -610,6 +610,10 @@ video {
   width: 50%;
 }
 
+.w-1 {
+  width: 0.25rem;
+}
+
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
